--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   <div class="nav-bar"></div>
 
   <div id="app">
-    <h1>{{ product}}</h1>
-    <p>{{ description }}</p>
+    <div class="product">
+      <div class="product-image">
+        <img src="/assets/vmSocks-green-onWhite.jpeg" alt="Sock-image">
+      </div>
+      <h1>{{ product }}</h1>
+      <p>{{ description }}</p>
+  </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
