--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       <div class="product-image">
         <img src="/assets/vmSocks-green-onWhite.jpeg" alt="Sock-image">
       </div>
-      <h1>{{ product }}</h1>
+
+      <div class="product-info">
+        <h1>{{ product }}</h1>
+      </div>
       <p>{{ description }}</p>
   </div>
   </div>
