--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="app">
     <div class="product">
       <div class="product-image">
-        <img src="/assets/vmSocks-green-onWhite.jpeg" alt="Sock-image">
+        <img v-bind:src="image" alt="Sock-image">
       </div>
 
       <div class="product-info">
