--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
   <div id="app">
     <div class="product">
       <div class="product-image">
-        <img :src="image" :alt="altText">
+        <img :src="image" />
       </div>
 
       <div class="product-info">
         <h1>{{ product }}</h1>
         <p v-if="inStock">In Stock</p>
         <p v-else>Out of Stock</p>
-      <ul>
-        <li v-for="detail in details">{{ detail }} </li>
-      </ul>
+        
+        <ul>
+          <li v-for="detail in details">{{ detail }} </li>
+        </ul>
       </div>
 
       <div v-for="variant in variants" :key="variant.variantId">
