--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
         <p>{{ variant.variantColor }}</p>
       </div>
 
-    </div>
+      <div class="cart">
+        <p>Cart ({{ cart }})</p>
+      </div>
+
     </div>
   </div>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <script src="main.js"></script>
