add to cart button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <p>{{ variant.variantColor }}</p>
       </div>
 
+      <button v-on:click:"addToCart">Add to Cart</button>
+
       <div class="cart">
         <p>Cart ({{ cart }})</p>
       </div>
