--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>{{ variant.variantColor }}</p>
       </div>
 
-      <button v-on:click:"addToCart">Add to Cart</button>
+      <button v-on:click="addToCart">Add to Cart</button>
 
       <div class="cart">
         <p>Cart ({{ cart }})</p>
