--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
 
       <div v-for="variant in variants" :key="variant.variantId">
-        <p @mouseove="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
+        <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
       </div>
 
       <button v-on:click="addToCart">Add to Cart</button>
