--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="nav-bar"></div>
 
   <div id="app">
-    <product />
+    <product></product>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
