added comment on html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <title>The Sockx</title>
 </head>
 <body>
-  
+  <!-- Navigation bar -->
   <div class="nav-bar"></div>
 
+  <!-- The body -->
   <div id="app">
     <product></product>
   </div>
