--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- The body -->
   <div id="app">
-    <product></product>
+    <product :premium="premium"></product>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
