--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
   <!-- The body -->
   <div id="app">
+    <div class="cart">
+      <p>Cart ({{ cart }})</p>
+    </div>
+
     <product :premium="premium"></product>
   </div>
 
