--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>Cart ({{ cart }})</p>
     </div>
 
-    <product :premium="premium"></product>
+    <product :premium="premium" @add-to-cart="updateCart"></product>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
